Redux now has info of user location at views: if user it as lobby screen then NewLobby button is disabled. Small overall style fixes: scrollbar is now hidden in schrome and user is still able to scroll.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 @import url("../src/assets/css/animations.css");
 
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none; 
+  overflow-y: scroll; 
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
 .App {
   text-align: center;
 
